Fix global header menu z-index for focalboard

--- a/mattermost-plugin/webapp/src/plugin.scss
+++ b/mattermost-plugin/webapp/src/plugin.scss
@@ -8,3 +8,7 @@
     display: inline-block;
     fill: rgb(var(--center-channel-color-rgb));
 }
+
+.focalboard-body .feature-global-header > header {
+    z-index: 1000;
+}
